--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
-Hello world!
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Project name</title>
+    <link rel="icon" type="image/png" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/198/octopus_1f419.png">
+
+    <!-- styles -->
+    <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/3.3/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet" />
+    <style>
+        img{
+            max-width: 100%;
+        }
+    </style>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    
+  </head>
+
+  <body>
+
+    <div class="container">
+
+      <div class="jumbotron">
+        <h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
+        <h2>A community building campaigns to stop the spread of COVID-19</h2>
+        <br>
+        <p class="lead">We build online campaigns that help prevent the worldwide spread of COVID-19. Whatever your background and whereabouts, feel empowered to join us.</p>
+        <br>
+        <p><a class="btn btn-lg btn-success" href="#" role="button">Join the movement</a></p>
+      </div>
+
+      <br>
+      <h2>Campaigns launched so far</h2>
+      <div class="row">
+        <div class="col-sm-4">
+          <h4><a href="https://dontleave.org">#StayHome</a></h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur</p>
+          <a href="https://dontleave.org"><img src="https://dontleave.org/img/logo-mix2.png"></a>
+        </div>
+        <div class="col-sm-4">
+          <h4><a href="https://dontleave.org">#BaliTaxiSafe</a></h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur</p>
+          <a href="https://dontleave.org"><img src="https://dontleave.org/img/logo-mix2.png"></a>
+        </div>
+        <div class="col-sm-4">
+          <h4><a href="https://dontleave.org">#StopPartying</a></h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur</p>
+          <a href="https://dontleave.org"><img src="https://dontleave.org/img/logo-mix2.png"></a>
+        </div>
+      </div>
+
+      <br>
+      <h2>Get involved</h2>
+      <div class="row">
+        <div class="col-sm-6">
+          <h4>Join the community</h4>
+          <ul>
+            <li>Join our Slack channel <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg">here</a></li>
+            <li>Subscribe to email updates <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg">here</a></li>
+            <li>Contact us <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg">here</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-6">
+          <h4>Contact Us</h4>
+          <p>Ping us <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg">here</a></p>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://getbootstrap.com/docs/3.3/dist/js/bootstrap.min.js"></script>
+
+  </body>
+</html>
