brand spanking new design

--- a/index.html
+++ b/index.html
@@ -1,88 +1,127 @@
-
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html>
+
+<head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon.ico" />
 
-    <title>Project name</title>
-    <link rel="icon" type="image/png" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/198/octopus_1f419.png">
+    <!-- seo -->
+    <title>covid-ready.org</title>
+    <!-- TODO -->
 
-    <!-- styles -->
-    <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/3.3/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet" />
-    <style>
-        img{
-            max-width: 100%;
-        }
-    </style>
+    <!-- css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/main.css?v=1" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    
-  </head>
+    <!-- Google Analytics -->
+    <!-- TODO -->
 
-  <body>
+</head>
+
+<body>
+
+    <div class="jumbotron">
+        <div class="container">
+            <h3><span class="highlighted">covid-ready.org</span></h3>
+            <br>
+            <h1>A community building campaigns to stop the spread of COVID-19</h1>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-sm-6">
+                    <p>We build online campaigns that help prevent the worldwide spread of COVID-19.</p>
+                    <p>Whatever your background and whereabouts, feel empowered to join us.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="jumbotron jumbotron2">
+        <h3>Please join us, we need everyone to help out!</h3>
+    </div>
 
     <div class="container">
 
-      <div class="jumbotron">
-        <h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
-        <h2>A community building campaigns to stop the spread of COVID-19</h2>
-        <br>
-        <p class="lead">We build online campaigns that help prevent the worldwide spread of COVID-19. Whatever your background and whereabouts, feel empowered to join us.</p>
-        <br>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Join the movement</a></p>
-      </div>
-
-      <br>
-      <h2>Campaigns launched so far</h2>
-      <div class="row">
-        <div class="col-sm-4">
-          <h4><a href="https://dontleave.org">#StayHome</a></h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur</p>
-          <a href="https://dontleave.org"><img src="https://dontleave.org/img/logo-mix2.png"></a>
+        <!-- Campaigns built so far -->
+        <div class="container2">
+            <h1>Campaigns built so far</h1>
+            <p>We've built a bunch of campaigns targeted at specific audiences around the world who may not know enough about the coronavirus pandemic or what they can do to help their loved ones.</p>
+            <br>
         </div>
-        <div class="col-sm-4">
-          <h4><a href="https://dontleave.org">#BaliTaxiSafe</a></h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur</p>
-          <a href="https://dontleave.org"><img src="https://dontleave.org/img/logo-mix2.png"></a>
-        </div>
-        <div class="col-sm-4">
-          <h4><a href="https://dontleave.org">#StopPartying</a></h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur</p>
-          <a href="https://dontleave.org"><img src="https://dontleave.org/img/logo-mix2.png"></a>
-        </div>
-      </div>
 
-      <br>
-      <h2>Get involved</h2>
-      <div class="row">
-        <div class="col-sm-6">
-          <h4>Join the community</h4>
-          <ul>
-            <li>Join our Slack channel <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg">here</a></li>
-            <li>Subscribe to email updates <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg">here</a></li>
-            <li>Contact us <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg">here</a></li>
-          </ul>
+        <!-- tiles -->
+        <div class="row">
+            <!-- #StayHome -->
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <a href="https://dontleave.org"><img src="https://dontleave.org/img/logo-mix2.png"></a>
+                    <div class="caption">
+                        <h3><a href="https://dontleave.org">#StayHome</a></h3>
+                        <p>Informing people why they need to self-isolate for the good of themselves but also other people.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- #BaliTaxiSafe -->
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <img src="https://dontleave.org/img/logo-mix2.png">
+                    <div class="caption">
+                        <h3><a href="https://dontleave.org">#BaliTaxiSafe</a></h3>
+                        <p>Advice to taxi drivers in Indonesia on how they can best protect themselves from spreading covid.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- #StopTouristing -->
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <img src="https://dontleave.org/img/logo-mix2.png">
+                    <div class="caption">
+                        <h3><a href="https://dontleave.org">#StopTouristing</a></h3>
+                        <p>A message to tourists in Asia to stop travelling so much as they pose a threat to the others.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- #JoinUs -->
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <img src="https://dontleave.org/img/logo-mix2.png">
+                    <div class="caption">
+                        <h3><a href="https://dontleave.org">#JoinUs</a></h3>
+                        <p>Please join us, we could really do with all the help we could get in building new campaigns.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-6">
-          <h4>Contact Us</h4>
-          <p>Ping us <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg">here</a></p>
+        
+        <!-- Start a campaign -->
+        <div class="container2">
+            <hr>
+            <h1>Start a campaign</h1>
+            <br>
+            <ul class="list-group text-left">
+                <li class="list-group-item">1) Find a specific community you want to target such as "backpackers in asia" or "people with cancer in the UK". Make sure to find specific clear advice from a reputable source.</li>
+                <li class="list-group-item">2) Send us your proposal <a href="#todo">here</a> and we'll fact-check it and respond within a couple hours. We're typically very quick!</li>
+                <li class="list-group-item">3) We'll get in touch to colaberte on building your marketing campaign and getting it live for you straight away!</li>
+                <li class="list-group-item">4) You take full ownership of the campaign and work on spreading it as far as possible through social media.</li>
+                <li class="list-group-item">5) Lives are saved, all thanks to you.</li>
+            </ul>
         </div>
-      </div>
 
-    </div>
+        <!-- Join the movement -->
+        <div class="container2">
+            <hr>
+            <h2>Join the movement</h2>
+            <p>This virus presents us with the largest opportunity to have a significant beneficial impact on saving the lives of others in our lifetimes. That's do it!</p>
+            <br>
+            <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg" class="btn btn-success btn-lg animated infinite pulse"><i class="fab fa-slack"></i> Join us on Slack</a>
+        </div>
 
-    <!-- scripts -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://getbootstrap.com/docs/3.3/dist/js/bootstrap.min.js"></script>
+</body>
 
-  </body>
 </html>
