--- a/index.html
+++ b/index.html
@@ -30,20 +30,19 @@
         <div class="container">
             <h3><span class="highlighted">covid-ready.org</span></h3>
             <br>
-            <h1>A community building campaigns to stop the spread of COVID-19</h1>
+            <h1>Let's stop the spread of COVID-19</h1>
             <br>
             <br>
             <div class="row">
                 <div class="col-sm-6">
                     <p>We build online campaigns that help prevent the worldwide spread of COVID-19.</p>
-                    <p>Whatever your background and whereabouts, feel empowered to join us.</p>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="jumbotron jumbotron2">
-        <h3>Please join us, we need everyone to help out!</h3>
+        <h3>Whatever your background and whereabouts, join us now!</h3>
     </div>
 
     <div class="container">
@@ -105,18 +104,16 @@
             <h1>Start a campaign</h1>
             <br>
             <ul class="list-group text-left">
-                <li class="list-group-item">1) Find a specific community you want to target such as "backpackers in asia" or "people with cancer in the UK". Make sure to find specific clear advice from a reputable source.</li>
+                <li class="list-group-item">1) Find a specific community you want to target such as "backpackers in asia" or "people with cancer in the UK".</li>
                 <li class="list-group-item">2) Send us your proposal <a href="#todo">here</a> and we'll fact-check it and respond within a couple hours. We're typically very quick!</li>
-                <li class="list-group-item">3) We'll get in touch to colaberte on building your marketing campaign and getting it live for you straight away!</li>
-                <li class="list-group-item">4) You take full ownership of the campaign and work on spreading it as far as possible through social media.</li>
-                <li class="list-group-item">5) Lives are saved, all thanks to you.</li>
+                <li class="list-group-item">3) We'll get your campaign live on our website and you take full ownership over spreading it as far as possible through social media.</li>
             </ul>
         </div>
 
-        <!-- Join the movement -->
+        <!-- Join our movement -->
         <div class="container2">
             <hr>
-            <h2>Join the movement</h2>
+            <h2>Join our movement</h2>
             <p>This virus presents us with the largest opportunity to have a significant beneficial impact on saving the lives of others in our lifetimes. That's do it!</p>
             <br>
             <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg" class="btn btn-success btn-lg animated infinite pulse"><i class="fab fa-slack"></i> Join us on Slack</a>
