--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container">
             <h3><span class="highlighted">covid-ready.org</span></h3>
             <br>
-            <h1>Let's stop the spread of COVID-19</h1>
+            <h1>Let's stop the spread of the Coronavirus disease</h1>
             <br>
             <br>
             <div class="row">
@@ -50,7 +50,7 @@
         <!-- Campaigns built so far -->
         <div class="container2">
             <h1>Campaigns built so far</h1>
-            <p>We've built a bunch of campaigns targeted at specific audiences around the world who may not know enough about the coronavirus pandemic or what they can do to help their loved ones.</p>
+            <p>We've built a number of campaigns targeted at specific audiences around the world uninformed  about the coronavirus pandemic and inform them what they can do to help prevent its spread.</p>
             <br>
         </div>
 
@@ -62,27 +62,31 @@
                     <a href="https://dontleave.org"><img src="https://dontleave.org/img/logo-mix2.png"></a>
                     <div class="caption">
                         <h3><a href="https://dontleave.org">#StayHome</a></h3>
-                        <p>Informing people why they need to self-isolate for the good of themselves but also other people.</p>
+                        <p>Helping people make the decision about self-quarantine or self-isolation  for the good of themselves and their loved ones.</p>
                     </div>
                 </div>
             </div>
-            <!-- #BaliTaxiSafe -->
+            <!-- #BaliTaxiDrivers -->
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <a href="campaigns/virus_corona_di_bali.html">
+                        <div class="tile">
+                            <h3>VIRUS CORONA DI BALI</h3>
+                        </div>
+                    </a>
+                    <div class="caption">
+                        <h3><a href="campaigns/virus_corona_di_bali.html">#IndonesiaTaxiDrivers</a></h3>
+                        <p>Advice to taxi drivers in Indonesia on how they can best protect themselves from contracting and spreading COVID-19.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- #JoinUs -->
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
                     <img src="https://dontleave.org/img/logo-mix2.png">
                     <div class="caption">
-                        <h3><a href="https://dontleave.org">#BaliTaxiSafe</a></h3>
-                        <p>Advice to taxi drivers in Indonesia on how they can best protect themselves from spreading covid.</p>
-                    </div>
-                </div>
-            </div>
-            <!-- #StopTouristing -->
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <img src="https://dontleave.org/img/logo-mix2.png">
-                    <div class="caption">
-                        <h3><a href="https://dontleave.org">#StopTouristing</a></h3>
-                        <p>A message to tourists in Asia to stop travelling so much as they pose a threat to the others.</p>
+                        <h3><a href="https://dontleave.org">#JoinUs</a></h3>
+                        <p>Please join us, we could really do with all the help we could get in building new campaigns.</p>
                     </div>
                 </div>
             </div>
@@ -101,12 +105,12 @@
         <!-- Start a campaign -->
         <div class="container2">
             <hr>
-            <h1>Start a campaign</h1>
+            <h1 class="animated infinite pulse">Start a campaign</h1>
             <br>
             <ul class="list-group text-left">
                 <li class="list-group-item">1) Find a specific community you want to target such as "backpackers in asia" or "people with cancer in the UK".</li>
                 <li class="list-group-item">2) Send us your proposal <a href="#todo">here</a> and we'll fact-check it and respond within a couple hours. We're typically very quick!</li>
-                <li class="list-group-item">3) We'll get your campaign live on our website and you take full ownership over spreading it as far as possible through social media.</li>
+                <li class="list-group-item">3) We'll get your campaign live on our website and you take full ownership over sharing it as far as possible through social media.</li>
             </ul>
         </div>
 
@@ -114,9 +118,9 @@
         <div class="container2">
             <hr>
             <h2>Join our movement</h2>
-            <p>This virus presents us with the largest opportunity to have a significant beneficial impact on saving the lives of others in our lifetimes. That's do it!</p>
+            <p>This virus presents us with the largest opportunity to have a significant beneficial impact on saving the lives of others in our lifetimes. Let's do it!</p>
             <br>
-            <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg" class="btn btn-success btn-lg animated infinite pulse"><i class="fab fa-slack"></i> Join us on Slack</a>
+            <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg" class="btn btn-success btn-lg"><i class="fab fa-slack"></i> Join us on Slack</a>
         </div>
 
 </body>
