--- a/campaigns/virus_corona_di_bali.html
+++ b/campaigns/virus_corona_di_bali.html
@@ -129,7 +129,7 @@
 
       <!-- share buttons -->
       <div class="text-center">
-        <a href="whatsapp://send?text=covid-ready.org/campaigns/virus_corona_di_bali" data-action="share/whatsapp/share" class="btn btn-success btn-lg">
+        <a href="whatsapp://send?text=https://covid-ready.org/campaigns/virus_corona_di_bali" data-action="share/whatsapp/share" class="btn btn-success btn-lg">
           <span><i class="fa fa-whatsapp"></i> Share on Whatsapp</span>  
         </a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=http://covid-ready.org/campaigns/indonesia_taxi_drivers.html" class="btn btn-primary btn-lg">
