virus_corona_di_bali

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
 
     <!-- Google Analytics -->
-    <!-- TODO -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132839837-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-132839837-2');
+    </script>
 
 </head>
 
@@ -69,13 +76,13 @@
             <!-- #BaliTaxiDrivers -->
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
-                    <a href="campaigns/virus_corona_di_bali.html">
+                    <a href="campaigns/virus_corona_di_bali">
                         <div class="tile">
                             <h3>VIRUS CORONA DI BALI</h3>
                         </div>
                     </a>
                     <div class="caption">
-                        <h3><a href="campaigns/virus_corona_di_bali.html">#IndonesiaTaxiDrivers</a></h3>
+                        <h3><a href="campaigns/virus_corona_di_bali">#IndonesiaTaxiDrivers</a></h3>
                         <p>Advice to taxi drivers in Indonesia on how they can best protect themselves from contracting and spreading COVID-19.</p>
                     </div>
                 </div>
