--- a/campaigns/virus_corona_di_bali.html
+++ b/campaigns/virus_corona_di_bali.html
@@ -7,13 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/png" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/198/octopus_1f419.png">
+    <!-- seo -->
+    <title>Corona Virus in Bali</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Coronavirus!" />
+    <meta property="og:description" content="Corona Virus in Bali" />
+    <meta property="og:url" content="https://covid-ready.org/images/virus_corona_di_bali.png" />
+    <meta property="og:image" content="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/whatsapp/238/flag-for-indonesia_1f1ee-1f1e9.png 2x" />
 
     <!-- styles -->
     <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/3.3/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet" />
     <style>
       .jumbotron{
         color: #fff;
@@ -31,11 +36,15 @@
       }
     </style>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132839837-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-132839837-2');
+    </script>    
     
   </head>
 
@@ -132,16 +141,12 @@
         <a href="whatsapp://send?text=https://covid-ready.org/campaigns/virus_corona_di_bali" data-action="share/whatsapp/share" class="btn btn-success btn-lg">
           <span><i class="fa fa-whatsapp"></i> Share on Whatsapp</span>  
         </a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=http://covid-ready.org/campaigns/indonesia_taxi_drivers.html" class="btn btn-primary btn-lg">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://covid-ready.org/campaigns/indonesia_taxi_drivers" class="btn btn-primary btn-lg">
           <span><i class="fa fa-facebook"></i> Share on Facebook</span>  
         </a>
       </div>      
 
-    </div>    
-
-    <!-- scripts -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://getbootstrap.com/docs/3.3/dist/js/bootstrap.min.js"></script>
+    </div>
 
   </body>
 </html>
