--- a/campaigns/virus_corona_di_bali.html
+++ b/campaigns/virus_corona_di_bali.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/whatsapp/238/flag-for-indonesia_1f1ee-1f1e9.png" />
+    <link rel="icon" href="https://covid-ready.org/images/indonesia_flag.png" />
 
     <!-- seo -->
     <title>Corona Virus in Bali</title>
