--- a/campaigns/virus_corona_di_bali.html
+++ b/campaigns/virus_corona_di_bali.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="http://covid-ready.org/images/indonesia_flag.png" />
+    <link rel="icon" href="https://covid-ready.org/images/indonesia_flag.png" />
 
     <!-- seo -->
     <title>Corona Virus in Bali</title>
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Coronavirus!" />
     <meta property="og:description" content="Corona Virus in Bali" />
-    <meta property="og:url" content="http://covid-ready.org/images/virus_corona_di_bali.png" />
-    <meta property="og:image" itemprop="image" content="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/whatsapp/238/flag-for-indonesia_1f1ee-1f1e9.png 2x" />
+    <meta property="og:url" content="https://covid-ready.org/campaigns/virus_corona_di_bali" />
+    <meta property="og:image" itemprop="image" content="https://covid-ready.org/images/virus_corona_di_bali.png" />
 
     <!-- styles -->
     <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -139,10 +139,10 @@
 
       <!-- share buttons -->
       <div class="text-center">
-        <a href="whatsapp://send?text=http://covid-ready.org/campaigns/virus_corona_di_bali" data-action="share/whatsapp/share" class="btn btn-success btn-lg">
+        <a href="whatsapp://send?text=https://covid-ready.org/campaigns/virus_corona_di_bali" data-action="share/whatsapp/share" class="btn btn-success btn-lg">
           <span><i class="fa fa-whatsapp"></i> Share on Whatsapp</span>  
         </a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=http://covid-ready.org/campaigns/indonesia_taxi_drivers" class="btn btn-primary btn-lg">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://covid-ready.org/campaigns/indonesia_taxi_drivers" class="btn btn-primary btn-lg">
           <span><i class="fa fa-facebook"></i> Share on Facebook</span>  
         </a>
       </div>      
