--- a/campaigns/virus_corona_di_bali.html
+++ b/campaigns/virus_corona_di_bali.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="https://covid-ready.org/images/indonesia_flag.png" />
+    <link rel="icon" href="../images/indonesia_flag.png" />
 
     <!-- seo -->
     <title>Corona Virus in Bali</title>
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Coronavirus!" />
     <meta property="og:description" content="Corona Virus in Bali" />
     <meta property="og:url" content="https://covid-ready.org/campaigns/virus_corona_di_bali" />
-    <meta property="og:image" itemprop="image" content="https://covid-ready.org/images/virus_corona_di_bali.png" />
+    <meta property="og:image" itemprop="image" content="../images/virus_corona_di_bali.png" />
 
     <!-- styles -->
     <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
