--- a/campaigns/virus_corona_di_bali.html
+++ b/campaigns/virus_corona_di_bali.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Coronavirus!" />
     <meta property="og:description" content="Corona Virus in Bali" />
     <meta property="og:url" content="https://covid-ready.org/campaigns/virus_corona_di_bali" />
-    <meta property="og:image" itemprop="image" content="../images/virus_corona_di_bali.png" />
+    <meta property="og:image" content="../images/virus_corona_di_bali.png" />
 
     <!-- styles -->
     <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
