--- a/campaigns/virus_corona_di_bali.html
+++ b/campaigns/virus_corona_di_bali.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="../images/indonesia_flag.png" />
+    <link rel="icon" href="images/indonesia_flag.png" />
 
     <!-- seo -->
     <title>Corona Virus in Bali</title>
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Coronavirus!" />
     <meta property="og:description" content="Corona Virus in Bali" />
     <meta property="og:url" content="https://covid-ready.org/campaigns/virus_corona_di_bali" />
-    <meta property="og:image" content="\images/virus_corona_di_bali.png" />
+    <meta property="og:image" content="images/virus_corona_di_bali.png" />
 
     <!-- styles -->
     <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -118,7 +118,7 @@
 
       <hr>
 
-      <img src="../images/handwashing.jpg">
+      <img src="images/handwashing.jpg">
       
       <hr>
       
@@ -144,6 +144,7 @@
           <span><i class="fa fa-facebook"></i> Share on Facebook</span>  
         </a>
       </div>      
+      <br>
 
     </div>
 
