--- a/campaigns/virus_corona_di_bali.html
+++ b/campaigns/virus_corona_di_bali.html
@@ -7,12 +7,12 @@
     <link rel="icon" href="images/indonesia_flag.png" />
 
     <!-- seo -->
-    <title>Corona Virus in Bali</title>
+    <title>Virus Corona di Bali</title>
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Coronavirus!" />
-    <meta property="og:description" content="Corona Virus in Bali" />
+    <meta property="og:title" content="Virus Corona di Bali" />
+    <meta property="og:description" content="Berada di keramaian juga dapat meningkatkan penyebaran penyakit. Penyakit menyebar sangat cepat dalam kelompok yang besar seperti di dalam acara maupun di restoran. Jagalah diri anda!" />
     <meta property="og:url" content="https://covid-ready.org/campaigns/virus_corona_di_bali" />
-    <meta property="og:image" content="images/virus_corona_di_bali.png" />
+    <meta property="og:image" content="images/virus_corona_di_bali_2.png" />
 
     <!-- styles -->
     <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
