--- a/campaigns/virus_corona_di_bali.html
+++ b/campaigns/virus_corona_di_bali.html
@@ -8,11 +8,13 @@
 
     <!-- seo -->
     <title>Virus Corona di Bali</title>
+    <meta name="description" content="Berada di keramaian juga dapat meningkatkan penyebaran penyakit. Penyakit menyebar sangat cepat dalam kelompok yang besar seperti di dalam acara maupun di restoran. Jagalah diri anda!">
+    <meta name="keywords" content="Coronavirus,COVID,COVID-19">
+    <meta name="author" content="#STAYHOME Campaigners">
+    <meta property="og:url" content="https://covid-ready.org/campaigns/virus_corona_di_bali" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Virus Corona di Bali" />
-    <meta property="og:description" content="Berada di keramaian juga dapat meningkatkan penyebaran penyakit. Penyakit menyebar sangat cepat dalam kelompok yang besar seperti di dalam acara maupun di restoran. Jagalah diri anda!" />
-    <meta property="og:url" content="https://covid-ready.org/campaigns/virus_corona_di_bali" />
-    <meta property="og:image" content="images/virus_corona_di_bali_2.png" />
+    <meta property="og:image" content="/images/virus_corona_di_bali_2.png" />
 
     <!-- styles -->
     <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
