--- a/c/virus_corona_di_bali.html
+++ b/c/virus_corona_di_bali.html
@@ -10,11 +10,11 @@
     <title>Virus Corona di Bali</title>
     <meta name="description" content="Berada di keramaian juga dapat meningkatkan penyebaran penyakit. Penyakit menyebar sangat cepat dalam kelompok yang besar seperti di dalam acara maupun di restoran. Jagalah diri anda!">
     <meta name="keywords" content="Coronavirus,COVID,COVID-19">
-    <meta name="author" content="#STAYHOME Campaigners">
+    <meta name="author" content="covid-ready.org">
     <meta property="og:url" content="https://covid-ready.org/virus_corona_di_bali" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Virus Corona di Bali" />
-    <meta property="og:image" content="images/virus_corona_di_bali_2.png" />
+    <meta property="og:image" content="images/virus_corona_di_bali.png" />
 
     <!-- styles -->
     <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
