--- a/c/virus_corona_di_bali.html
+++ b/c/virus_corona_di_bali.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://covid-ready.org/virus_corona_di_bali" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Virus Corona di Bali" />
-    <meta property="og:image" content="images/virus_corona_di_bali.png" />
+    <meta property="og:image" content="images/virus_corona_di_bali.jpg" />
 
     <!-- styles -->
     <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
