--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="campaigns/images/earth-emoji.png" />
 
     <!-- seo -->
     <title>covid-ready.org</title>
-    <!-- TODO -->
+    <meta property="og:type"    content="website" />
+    <meta name="author"         content="covid-ready.org">
+    <meta name="keywords"       content="Coronavirus,COVID,COVID-19">
+    <meta property="og:title"   content="Let's stop the spread of the Coronavirus disease" />
+    <meta name="description"    content="We build online campaigns that help prevent the worldwide spread of COVID-19.">
+    <meta property="og:url"     content="https://covid-ready.org" />
+    <meta property="og:image"   content="https://covid-ready.org/campaigns/images/coronavirus.jpg" />
 
     <!-- css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400" />
     <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/main.css?v=1" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
 
     <!-- Google Analytics -->
@@ -43,20 +49,17 @@
             <div class="row">
                 <div class="col-sm-6">
                     <p>We build online campaigns that help prevent the worldwide spread of COVID-19.</p>
+                    <p>Whatever your background and whereabouts,<br><u>please join us now!</u></p>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="jumbotron jumbotron2">
-        <h3>Whatever your background and whereabouts, join us now!</h3>
-    </div>
-
     <div class="container">
 
-        <!-- Campaigns built so far -->
+        <!-- Campaigns we've launched -->
         <div class="container2">
-            <h1>Campaigns built so far</h1>
+            <h1>Campaigns we've launched</h1>
             <p>We've built a number of campaigns targeted at specific audiences around the world uninformed  about the coronavirus pandemic and inform them what they can do to help prevent its spread.</p>
             <br>
         </div>
@@ -64,46 +67,42 @@
         <!-- tiles -->
         <div class="row">
             <!-- #StayHome -->
-            <div class="col-sm-6 col-md-3">
+            <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="https://dontleave.org"><img src="https://dontleave.org/img/logo-mix2.png"></a>
+                    <a href="https://dontleave.org">
+                        <div class="tile" style="background-color: #3498db">
+                            <h3>#STAYHOME</h3>
+                        </div>
+                    </a>
                     <div class="caption">
-                        <h3><a href="https://dontleave.org">#StayHome</a></h3>
+                        <h3><a href="https://dontleave.org" style="color: #3498db">#StayHome</a></h3>
                         <p>Helping people make the decision about self-quarantine or self-isolation  for the good of themselves and their loved ones.</p>
                     </div>
                 </div>
             </div>
-            <!-- #BaliTaxiDrivers -->
-            <div class="col-sm-6 col-md-3">
+            <!-- VIRUS CORONA DI BALI -->
+            <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="campaigns/virus_corona_di_bali">
-                        <div class="tile">
+                        <div class="tile" style="background-color: #e74c3c">
                             <h3>VIRUS CORONA DI BALI</h3>
                         </div>
                     </a>
                     <div class="caption">
-                        <h3><a href="campaigns/virus_corona_di_bali">#IndonesiaTaxiDrivers</a></h3>
+                        <h3><a href="campaigns/virus_corona_di_bali" style="color: #e74c3c">VIRUS CORONA DI BALI</a></h3>
                         <p>Advice to taxi drivers in Indonesia on how they can best protect themselves from contracting and spreading COVID-19.</p>
                     </div>
                 </div>
             </div>
             <!-- #JoinUs -->
-            <div class="col-sm-6 col-md-3">
+            <div class="col-md-4">
                 <div class="thumbnail">
-                    <img src="https://dontleave.org/img/logo-mix2.png">
-                    <div class="caption">
-                        <h3><a href="https://dontleave.org">#JoinUs</a></h3>
-                        <p>Please join us, we could really do with all the help we could get in building new campaigns.</p>
+                    <div class="tile" style="background-color: #e67e22">
+                        <h3>JOIN US</h3>
                     </div>
-                </div>
-            </div>
-            <!-- #JoinUs -->
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <img src="https://dontleave.org/img/logo-mix2.png">
                     <div class="caption">
-                        <h3><a href="https://dontleave.org">#JoinUs</a></h3>
-                        <p>Please join us, we could really do with all the help we could get in building new campaigns.</p>
+                        <h3 style="color: #e67e22">Join Us</h3>
+                        <p>We're looking for help in starting new campaigns! Anyone can start a campaign so see the instructions below on how to get involved.</p>
                     </div>
                 </div>
             </div>
@@ -114,20 +113,42 @@
             <hr>
             <h1 class="animated infinite pulse">Start a campaign</h1>
             <br>
-            <ul class="list-group text-left">
-                <li class="list-group-item">1) Find a specific community you want to target such as "backpackers in asia" or "people with cancer in the UK".</li>
-                <li class="list-group-item">2) Send us your proposal <a href="#todo">here</a> and we'll fact-check it and respond within a couple hours. We're typically very quick!</li>
-                <li class="list-group-item">3) We'll get your campaign live on our website and you take full ownership over sharing it as far as possible through social media.</li>
-            </ul>
+            <div class="thumbnail">
+                <div class="caption">
+                    <table class="table text-left">
+                        <tr>
+                            <td>1)</td>
+                            <td>Find a specific community you want to target such as "backpackers in asia" or "people with cancer in the UK".</td>
+                        </tr>
+                        <tr>
+                            <td>2)</td>
+                            <td>Send us your proposal <a href="https://docs.google.com/forms/d/e/1FAIpQLSeab4K_zK6lT_ZWzsJo1he1Le2chmWZK3SR2qcatTDDaSKncQ/viewform">here</a> and we'll fact-check it and respond within a couple hours. We're typically very quick!</td>
+                        </tr>
+                        <tr>
+                            <td>3)</td>
+                            <td>We'll get your campaign live on our website and you take full ownership over sharing it as far as possible through social media.</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            
         </div>
 
         <!-- Join our movement -->
         <div class="container2">
             <hr>
-            <h2>Join our movement</h2>
+            <h1>Join our movement</h1>
+            <br>
             <p>This virus presents us with the largest opportunity to have a significant beneficial impact on saving the lives of others in our lifetimes. Let's do it!</p>
             <br>
-            <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg" class="btn btn-success btn-lg"><i class="fab fa-slack"></i> Join us on Slack</a>
+            <div class="row">
+                <div class="col-md-6">
+                    <a href="https://join.slack.com/t/campaignsforgood/shared_invite/zt-clnx2t1v-VFHwtyXhmqzKk2NT_W2Eeg" class="btn btn-success btn-lg" style="background-color: #f39c12;"><i class="fa fa-slack"></i> Join us on Slack</a>
+                </div>
+                <div class="col-md-6">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeab4K_zK6lT_ZWzsJo1he1Le2chmWZK3SR2qcatTDDaSKncQ/viewform" class="btn btn-primary btn-lg" style="background-color: #1abc9c;"><i class="fa fa-plus"></i> Submit Campaign</a>
+                </div>
+            </div>
         </div>
 
 </body>
