--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title"   content="Let's stop the spread of the Coronavirus disease" />
     <meta name="description"    content="We build online campaigns that help prevent the worldwide spread of COVID-19.">
     <meta property="og:url"     content="https://covid-ready.org" />
-    <meta property="og:image"   content="https://covid-ready.org/campaigns/images/coronavirus.jpg" />
+    <meta property="og:image"   content="https://covid-ready.org/campaigns/images/coronavirus.jpeg" />
 
     <!-- css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
