--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="author"         content="covid-ready.org">
     <meta name="keywords"       content="Coronavirus,COVID,COVID-19">
     <meta property="og:title"   content="Let's stop the spread of the Coronavirus disease" />
-    <meta name="description"    content="We build online campaigns that help prevent the worldwide spread of COVID-19.">
+    <meta name="description"    content="We build online campaigns that help prevent the worldwide spread of COVID-19. Whatever your background, join us now!">
     <meta property="og:url"     content="https://covid-ready.org" />
     <meta property="og:image"   content="https://covid-ready.org/campaigns/images/coronavirus.jpg" />
 
