--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <br>
             <br>
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                     <p>We build online campaigns that help prevent the worldwide spread of COVID-19.</p>
-                    <p>Whatever your background and whereabouts,<br><u>please join us now!</u></p>
+                    <p>Whatever your background and whereabouts, <u>please join us now!</u></p>
                 </div>
             </div>
         </div>
