--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <hr>
             <h1>Join our movement</h1>
             <br>
-            <p>This virus presents us with the largest opportunity to have a significant beneficial impact on saving the lives of others in our lifetimes. Let's do it!</p>
+            <p>This virus presents us with one of the largest opportunities to have a significant beneficial impact on saving the lives of others in our lifetimes. Let's do it!</p>
             <br>
             <div class="row">
                 <div class="col-md-6">
